# golf-thing

./: entity.py  init.py  pyproject.toml  readme.md
entities/: cursor.py  flag.py  golfer.py  swing_meter.py
src/: app.py  category.py  club.py  command.py  config.py  entity.py  game.py  keys.py  player.py  state.py  state_stack.py
src/entities/: ball.py  ball.pyi  cursor.py  flag.py  golfer.py  swing_meter.py
