[tool.poetry]
name = "golf-thing"
version = "0.1.0"
description = ""
authors = ["Eric Harm <ericharm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
numpy = "^1.23.0"
mypy = "^0.982"
bezier = "^2021.2.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
